Added Session and CSRF among other updateds

--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -1,10 +1,15 @@
 {% extends 'base.html.twig' %}
+{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <h1>Contact the Villa</h1>
                 <p>Should you have any questions please don't hesitate to contact us.</p>
+
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                {{ form_end(form) }}
             </div>
         </div>
     </div>
